# IstowUpdater

./: .gitignore  CMakeLists.txt  import_istow_reference.md  main.cpp  package-lock.json
.github/prompts/: plan-activityLogCsvExport.prompt.md
data/: istow_installer.sqlite
docs/: backuprepository-database.md  implementation_plan database compare and patch.md  plan.md  walkthrough Patch DB Data.md
src/entity/: Ship.h
src/models/: BackupSessionModel.cpp  BackupSessionModel.h  CompareAndPatchDbModel.cpp  CompareAndPatchDbModel.h  InstallerModel.cpp  InstallerModel.h  IstowImporter.cpp  IstowImporter.h  LogModel.cpp  LogModel.h  PatchDbModel.cpp  PatchDbModel.h  ShipModel.cpp  ShipModel.h
src/pages/: AppButton.qml  BrowseDotIstow.qml  CompareAndPatchDbPage.qml  InstallerFormPopup.qml  LogsPage.qml  MainPage.qml  PatchDbPage.qml  PatchDbTableAccordion.qml  PatchDbTableView.qml  RollbackApplicationPage.qml  RollbackAssetsPage.qml  UpdateApplicationPage.qml
src/repository/: backuprepository.cpp  backuprepository.h  installerrepository.cpp  installerrepository.h  localrepository.cpp  localrepository.h  logrepository.cpp  logrepository.h  repository.cpp  repository.h
